fix more spacing issues

--- a/wp-content/themes/conall-child/src/scss/pages/page-tomorrow.scss
+++ b/wp-content/themes/conall-child/src/scss/pages/page-tomorrow.scss
@@ -57,7 +57,7 @@ div#section-euhcc { /* section */
 div#section-nexgen {
     background-color: $white;
     aspect-ratio: 1920/2000;
-    margin-top: -225px !important;
+    margin-top: -14% !important;
     padding-bottom: 5% !important;
     div#col-nexgen {
         div#nextgen-row1 {
@@ -220,7 +220,7 @@ div#section-future-treat {
     justify-content: center;
     align-items: center;
     margin-bottom: -85px !important;
-    transform: translateY(-150px);
+    margin-top: -8% !important;
     div#col-future-treat {
             margin-top: 10% !important;
     margin-bottom: 17% !important;
@@ -331,9 +331,8 @@ div#section-patient-video {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: -9.5%;
+    margin-top: 3%;
     padding-bottom: 9%;
-    transform: translateY(-50px);
     div#patient--video-row {
         div#col-patient-video-heading {
             margin-top: 8% !important;
@@ -745,7 +744,7 @@ div#section-hsform-outer-tom.edh-section {
         }
     }
     div#section-patient-video {
-        margin-top: -12%;
+        margin-top: 7%;
     }
 }
 
@@ -872,7 +871,7 @@ div#section-hsform-outer-tom.edh-section {
     div#section-nexgen {
     background-color: $white;
     aspect-ratio: 1920/2500;
-    margin-top: -250px !important;
+    margin-top: -15% !important;
     margin-bottom: 5% !important;
         div#col-nexgen {
             div#nextgen-row1 {
@@ -1347,6 +1346,7 @@ div#section-hsform-outer-tom.edh-section {
     justify-content: center;
     align-items: center;
     margin-bottom: 0px !important;
+    margin-top: -25% !important;
         div#col-future-treat {
             margin-top: 10% !important;
             margin-bottom: 17% !important;
@@ -1443,7 +1443,7 @@ div#section-hsform-outer-tom.edh-section {
         left: -6px;
     }
     div#section-patient-video {
-        margin-top: -10%;
+        margin-top: 15%;
         div#patient--video-row {
             div#col-patient-video-heading {
                 margin-top: 0 !important;
